Shenandoah: incorrect include in shenandoahInitLogger.cpp

XMLWordPrintable

    • gc
    • b05

        Building without JFR exposes this:

        $ sh ./configure --with-debug-level=release --with-jvm-features=-jfr

        /usr/bin/ld: /home/shade/trunks/jdk-jdk/build/linux-x86_64-server-release/hotspot/variant-server/libjvm/objs/shenandoahInitLogger.o: in function `ShenandoahInitLogger::print_heap()':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahInitLogger.cpp:38: undefined reference to `ShenandoahHeap::heap()'
        collect2: error: ld returned 1 exit status

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: