8248634: Shenandoah: incorrect include in shenandoahInitLogger.cpp

Reviewed-by: rkennke